--- a/index.html
+++ b/index.html
@@ -14,13 +14,8 @@
             align-items: center;
             height: 100vh;
             margin: 0;
-            background: radial-gradient(#ff7e5f, #feb47b);
             font-family: Arial, sans-serif;
-            color: #fff;
-        }
-        #jokecontent, #joke {
-            margin-top: 20px;
-            text-align: center;
+            background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
         }
         #btn {
             padding: 10px 20px;
@@ -28,19 +23,16 @@
             cursor: pointer;
             border: none;
             border-radius: 5px;
-            background-color: #fff;
-            color: #ff7e5f;
             transition: background-color 0.3s, color 0.3s;
+            margin-bottom: 20px; 
         }
         #btn:hover {
-            background-color: #ff7e5f;
-            color: #fff;
+            background-color: #ddd;
+            color: #333;
         }
         #img {
-            margin-top: 20px;
-            width: 500px;
+            margin-top: 20px; 
             border-radius: 10px;
-            height: auto;
         }
     </style>
 </head>
